parte derecha de navegador

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 
         <!----browser-->
         <nav class="borde nav">
-            <div class="borde name">MY SECOND PAGE</div>
+            <div class=" borde portafolio">
+                <ul>
+                    <li>
+                        <a href="">Portafolio</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
 
 
