--- a/index.html
+++ b/index.html
@@ -16,10 +16,25 @@
 
         <!----browser-->
         <nav class="borde nav">
+            <div class="name">MY SECOND PAGE</div>
             <div class=" borde portafolio">
                 <ul>
                     <li>
-                        <a href="">Portafolio</a>
+                        <a href="">portfolio</a>
+                    </li>
+                </ul>
+            </div>
+            <div class=" borde about">
+                <ul>
+                    <li>
+                        <a href="">about</a>
+                    </li>
+                </ul>
+            </div>
+            <div class=" borde contanc">
+                <ul>
+                    <li>
+                        <a href="">contanc</a>
                     </li>
                 </ul>
             </div>
