--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
 
-    <div class="borde contenedor">
+    <div class="contenedor">
 
         <!----browser-->
-        <nav class="borde nav">
+        <nav class="nav">
             <div class="name">MY SECOND PAGE</div>
             <div class=" borde portafolio">
                 <ul>
@@ -39,6 +39,10 @@
                 </ul>
             </div>
         </nav>
+
+        <header class="borde contenedor-principal">
+
+        </header>
 
 
 
