--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
         <!----browser-->
         <nav class="nav">
             <div class="name">MY SECOND PAGE</div>
-            <div class=" borde portafolio">
+            <div class="portafolio">
                 <ul>
                     <li>
                         <a href="">portfolio</a>
                     </li>
                 </ul>
             </div>
-            <div class=" borde about">
+            <div class="about">
                 <ul>
                     <li>
                         <a href="">about</a>
                     </li>
                 </ul>
             </div>
-            <div class=" borde contanc">
+            <div class="contanc">
                 <ul>
                     <li>
                         <a href="">contanc</a>
@@ -39,8 +39,9 @@
                 </ul>
             </div>
         </nav>
-
+        <!---Header-->
         <header class="borde contenedor-principal">
+            <div class="img-primary"></div>
 
         </header>
 
