--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="img-primary"></div>
             <h2>Jenen System</h2>
             <section class="borde seccion">
-                <h2>Portafolio</h2>
+                <h2>-----Portafolio-----</h2>
             </section>
             <section class="borde seccion-2">
                 <div class=" borde primary"></div>
