--- a/index.html
+++ b/index.html
@@ -43,12 +43,19 @@
         <header class="borde contenedor-principal">
             <div class="img-primary"></div>
             <h2>Jenen System</h2>
-            <section class="borde seccion">
+            <div class="borde seccion">
                 <h2>-----Portafolio-----</h2>
-            </section>
-            <section class="borde seccion-2">
-                <div class=" borde primary"></div>
-            </section>
+            </div>
+            <section class="borde primary"></section>
+            <div class="borde seccion-2">
+                <h2>----About----</h2>
+            </div>
+            <section class="borde second"></section>
+
+
+
+
+
 
         </header>
 
