--- a/index.html
+++ b/index.html
@@ -43,11 +43,15 @@
         <header class="borde contenedor-principal">
             <div class="img-primary"></div>
             <h2>Jenen System</h2>
-            <div class="borde seccion">
+            <!----Section portafolio-->
+            <div class="borde section">
                 <h2>-----Portafolio-----</h2>
             </div>
-            <section class="borde primary"></section>
-            <div class="borde seccion-2">
+            <section class="borde primary">
+                <div class="borde separaciones"></div>
+            </section>
+            <!----Section About-->
+            <div class="borde section-2">
                 <h2>----About----</h2>
             </div>
             <section class="borde second"></section>
