arreglos en principal

--- a/index.html
+++ b/index.html
@@ -43,12 +43,15 @@
         <header class="borde contenedor-principal">
             <div class="img-primary"></div>
             <h2>Jenen System</h2>
+            <i class="far fa-star"></i>
+            <h3>Aprendices Sena</h3>
             <!----Section portafolio-->
             <div class="borde section">
                 <h2>-----Portafolio-----</h2>
             </div>
             <section class="borde primary">
                 <div class="borde separaciones"></div>
+
             </section>
             <!----Section About-->
             <div class="borde section-2">
