--- a/index.html
+++ b/index.html
@@ -40,17 +40,20 @@
             </div>
         </nav>
         <!---Header-->
-        <header class="borde contenedor-principal">
+        <header class="contenedor-principal">
             <div class="img-primary"></div>
             <h2>Jenen System</h2>
             <i class="far fa-star"></i>
             <h3>Aprendices Sena</h3>
             <!----Section portafolio-->
-            <div class="borde section">
+            <div class="section">
                 <h2>-----Portafolio-----</h2>
+                <i class="far fa-star"></i>
             </div>
+            <!----portfolios--->
             <section class="borde primary">
-                <div class="borde separaciones"></div>
+                <div class="borde folders-int"></div>
+
 
             </section>
             <!----Section About-->
