--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
                 <i class="far fa-star"></i>
             </div>
             <!----portfolios--->
-            <section class="borde primary">
-                <div class="borde folders-int"></div>
+            <section class="primary">
+                <div class="borde folders-int">
+                    <div class="borde colum-sup"></div>
+                    <div class="borde colum-cen"></div>
+                    <div class="borde colum-inf"></div>
+                </div>
 
 
             </section>
