--- a/index.html
+++ b/index.html
@@ -53,9 +53,16 @@
             <!----portfolios--->
             <section class="primary">
                 <div class="borde folders-int">
-                    <div class="borde colum-sup"></div>
-                    <div class="borde colum-cen"></div>
-                    <div class="borde colum-inf"></div>
+                    <div class="colum-izq">
+                        <div class="one"></div>
+                        <div class="two"></div>
+                        <div class="three"></div>
+                    </div>
+                    <div class="colum-inf">
+                        <div class="four"></div>
+                        <div class="five"></div>
+                        <div class="six"></div>
+                    </div>
                 </div>
 
 
@@ -63,6 +70,7 @@
             <!----Section About-->
             <div class="borde section-2">
                 <h2>----About----</h2>
+                <i class="far fa-star"></i>
             </div>
             <section class="borde second"></section>
 
