--- a/index.html
+++ b/index.html
@@ -52,16 +52,28 @@
             </div>
             <!----portfolios--->
             <section class="primary">
-                <div class="borde folders-int">
+                <div class="folders-int">
                     <div class="colum-izq">
-                        <div class="one"></div>
-                        <div class="two"></div>
-                        <div class="three"></div>
+                        <div class="one">
+                            <div class="pone"></div>
+                        </div>
+                        <div class="two">
+                            <div class="ptwo"></div>
+                        </div>
+                        <div class="three">
+                            <div class="pthree"></div>
+                        </div>
                     </div>
                     <div class="colum-inf">
-                        <div class="four"></div>
-                        <div class="five"></div>
-                        <div class="six"></div>
+                        <div class="four">
+                            <div class="pfour"></div>
+                        </div>
+                        <div class="five">
+                            <div class="pfive"></div>
+                        </div>
+                        <div class="six">
+                            <div class="psix"></div>
+                        </div>
                     </div>
                 </div>
 
@@ -71,6 +83,16 @@
             <div class="borde section-2">
                 <h2>----About----</h2>
                 <i class="far fa-star"></i>
+                <div class="caja_text">
+                    <div class="cajaizq-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident consectetur fuga eligendi, quo non nisi sit, voluptate saepe, ullam commodi rerum sequi accusamus eveniet omnis sint animi minus earum ut!</p>
+                    </div>
+                    <div class="cajader-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sunt, adipisci magni molestiae vero architecto deleniti reprehenderit obcaecati atque enim est ipsam doloremque placeat cum, commodi ullam.</p>
+                    </div>
+                </div>
+
+
             </div>
             <section class="borde second"></section>
 
