--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h3>Aprendices Sena</h3>
             <!----Section portafolio-->
             <div class="section">
-                <h2>-----Portafolio-----</h2>
+                <h2>-----PORTFOLIO-----</h2>
                 <i class="far fa-star"></i>
             </div>
             <!----portfolios--->
@@ -81,7 +81,7 @@
             </section>
             <!----Section About-->
             <div class="borde section-2">
-                <h2>----About----</h2>
+                <h2>----ABOUT----</h2>
                 <i class="far fa-star"></i>
                 <div class="caja_text">
                     <div class="cajaizq-text">
@@ -91,10 +91,14 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sunt, adipisci magni molestiae vero architecto deleniti reprehenderit obcaecati atque enim est ipsam doloremque placeat cum, commodi ullam.</p>
                     </div>
                 </div>
-
+                <a>Free download</a>
 
             </div>
-            <section class="borde second"></section>
+            <section class="borde second">
+                <h2>-----CONTACT ME-----</h2>
+                <i class="far fa-star"></i>
+
+            </section>
 
 
 
