--- a/index.html
+++ b/index.html
@@ -94,9 +94,17 @@
                 <a>Free download</a>
 
             </div>
-            <section class="borde second">
+            <section class="second">
                 <h2>-----CONTACT ME-----</h2>
                 <i class="far fa-star"></i>
+                <form action="" class="formulario">
+                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Email address">
+                    <input type="text" placeholder="Phone number">
+                    <input type="text" placeholder="Message">
+                    <button>Send</button>
+
+                </form>
 
             </section>
 
