--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             </section>
             <!----Section About-->
-            <div class="borde section-2">
+            <div class="section-2">
                 <h2>----ABOUT----</h2>
                 <i class="far fa-star"></i>
                 <div class="caja_text">
@@ -106,6 +106,24 @@
 
                 </form>
 
+            </section>
+            <section class="date">
+                <div class="borde location">
+                    <h2>Location</h2>
+                    <p>2215 John Daniel Drive </p>
+                    <p>Clark, MO 65243 </p>
+                </div>
+                <div class="borde around-the-web">
+                    <h2>Around the Web</h2>
+                    <div class="redes">
+                        <div class=" pred"><i class="fab fa-facebook"></i></div>
+                        <div class="sred"><i class="fab fa-twitter"></i></div>
+                        <div class="tred"><i class="fab fa-linkedin-in"></i></div>
+
+                    </div>
+
+                </div>
+                <div class="borde about-freelancer"></div>
             </section>
 
 
